--- a/Views/Home/Create.cshtml
+++ b/Views/Home/Create.cshtml
@@ -1,1 +1,35 @@
-﻿
+﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@using MVC_Web_App.Models
+@model MVC_Web_App.Models.Contact
+<head>
+    <meta name="viewport" content="width=device-width" />
+    <title>Create</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+</head>
+
+
+<h2 class="my-4">Добавить контакт в базу данных</h2>
+
+<form asp-action="Create" asp-controller="Contacts" class="form-group">
+    <div class="mb-3">
+        <label asp-for="Name" class="form-label">Имя</label>
+        <input type="text" asp-for="Name" class="form-control" />
+    </div>
+    <div class="mb-3">
+        <label asp-for="Email" class="form-label">Электронная почта</label>
+        <input type="email" asp-for="Email" class="form-control" />
+    </div>
+    <div class="mb-3">
+        <label asp-for="Phone" class="form-label">Телефонный номер</label>
+        <input type="tel" asp-for="Phone" class="form-control" />
+    </div>
+    <div class="mb-3">
+        <label asp-for="Address" class="form-label">Адрес</label>
+        <input type="text" asp-for="Address" class="form-control" />
+    </div>
+    <div class="mb-3">
+        <input type="submit" value="Добавить" class="btn btn-primary" />
+    </div>
+</form>
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
